# clone_pseudo_fs

./: CMakeLists.txt  CREDITS  ChangeLog  INSTALL  Makefile.am  README  clone_pseudo_fs.spec  cmake_del_artifacts.sh  configure.ac
debian/: changelog  control  copyright
doc/: Makefile.am  README  clone_pseudo_fs.8
examples/: CMakeLists.txt  Makefile.am  README  prun4lsblk.sh  prun4lscpu.sh  prun4lsmem.sh  prun4lsscsi.sh  prun4lsscsi_nvme.sh  prun4lsucpd.sh  test_all.sh
src/: Makefile.am  clone_pseudo_fs.cpp
testing/: Makefile  fs_path_test.cpp  renameat2.c
