SUBDIRS =	src doc examples

EXTRA_DIST=\
	autogen.sh

distclean-local:
	rm -rf \
	  ar-lib \
	  autom4te.cache \
	  aclocal.m4 \
	  compile \
	  configure \
	  config.guess \
	  config.guess.cdbs-orig\
	  config.sub \
	  config.sub.cdbs-orig \
	  config.h.in \
	  config.h \
	  config.log \
	  config.status \
	  Makefile \
	  Makefile.in \
	  missing \
	  install-sh \
	  depcomp \
	  ltmain.sh

